media queries added to fix navbar and lightbulb display on mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,3 +1,9 @@
 .aboutcontainer {
   text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+  .aboutcontainer {
+    padding-top: 150px;
+  }
+}
