--- a/src/styles/darkMode.css
+++ b/src/styles/darkMode.css
@@ -119,3 +119,9 @@ a:hover {
       transform: rotate(-3deg);
   }
 }
+
+@media screen and (max-width: 600px) {
+  .wire {
+    height: 150px;
+  }
+}
