--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -29,3 +29,8 @@
   text-decoration: none;
 }
 
+@media screen and (max-width: 600px) {
+  .nav ul {
+    display: block;
+  }
+}
